# aitoolstest

./: README.md
windsurf/: README.md  test.md
windsurf/calculator/projectCalculator/: CMakeLists.txt  README.md  main.cpp
windsurf/calculator/projectCalculator/include/: Token.h
windsurf/calculator/projectCalculator/src/: Calculator.cpp
windsurf/calculator/simpleCalculator/: calc.cpp
windsurf/projectCalculator/include/: Calculator.h
windsurf/simpleCalculator/: a.out  calc.cpp
